--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <table style="width:100%">
     <tr>
-        <th>Past 7 day average daily jab rate in Chicago</th>
+        <th>Previous 7 day average daily jab rate in Chicago</th>
         <th>Cumulative jabs to date</th>
         <th>Source</th>
         <th>Chicago Population</th>
