--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
         <td id="days_to_jab"></td>
     </tr>
 </table>
+
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script></script>
 </body>
 </html>
