--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <td id="days_to_jab"></td>
     </tr>
 </table>
-
+<svg></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script></script>
 </body>
