--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </tr>
 </table>
 <svg class="bar-graph"></svg>
-<p class="bar-graph-explanation-paragraph">Number of days to jab 80% of Chicago residents based on historical 7 day rolling mean jab rate of previous days</p>
+<p class="bar-graph-explanation-paragraph">Number of days to jab 80% of Chicago residents based on historical 7 day rolling mean jab rate</p>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script></script>
 </body>
